--- a/Presentacion/Web.config
+++ b/Presentacion/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Presentacion-20140523183851;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Presentacion-20140523183851.mdf" providerName="System.Data.SqlClient" />
+    <add name="ReservasDB" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=ReservasDB;Integrated Security=True;Pooling=False;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
