--- a/AccesoDatos/AccesoDatos.csproj
+++ b/AccesoDatos/AccesoDatos.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReservasContext.cs" />
+    <Compile Include="ReservasDbInitializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
