--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -39,9 +39,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Caracteristica.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="pruebaJulio.cs" />
-    <Compile Include="TestClassNico.cs" />
+    <Compile Include="Recurso.cs" />
+    <Compile Include="TipoCaracteristica.cs" />
+    <Compile Include="TipoRecurso.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
