--- a/AccesoDatos/AccesoDatos.csproj
+++ b/AccesoDatos/AccesoDatos.csproj
@@ -45,8 +45,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RecursosRepo.cs" />
     <Compile Include="ReservasContext.cs" />
     <Compile Include="ReservasDbInitializer.cs" />
+    <Compile Include="TiposDeRecursosRepo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
