--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\AccesoDatos\packages.config" />
+  <repository path="..\Dominio\packages.config" />
   <repository path="..\Presentacion\packages.config" />
 </repositories>
