--- a/AccesoDatos/AccesoDatos.csproj
+++ b/AccesoDatos/AccesoDatos.csproj
@@ -52,10 +52,13 @@
   <ItemGroup>
     <Compile Include="AccesoDatosModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RecursosRepo.cs" />
+    <Compile Include="Repos\RecursosRepo.cs" />
+    <Compile Include="Repos\RepoBase.cs" />
+    <Compile Include="Repos\TiposDeCaracteristicasRepo.cs" />
     <Compile Include="ReservasContext.cs" />
     <Compile Include="ReservasDbInitializer.cs" />
-    <Compile Include="TiposDeRecursosRepo.cs" />
+    <Compile Include="Repos\TiposDeRecursosRepo.cs" />
+    <Compile Include="TiposPredefinidos.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
