--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -50,6 +50,7 @@
     <Compile Include="DominioModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Recurso.cs" />
+    <Compile Include="Security\UserProfile.cs" />
     <Compile Include="TipoCaracteristica.cs" />
     <Compile Include="TipoRecurso.cs" />
     <Compile Include="TipodeUsuario.cs" />
