Crear Usuario hecho

--- a/Presentacion/Web.config
+++ b/Presentacion/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Presentacion-20140523183851;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Presentacion-20140523183851.mdf" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=SecurityDB;Integrated Security=True;Pooling=False;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Presentacion-20140523183851;Integrated Security=True;AttachDBFilename=|DataDirectory|\aspnet-Presentacion-20140523183851.mdf" providerName="System.Data.SqlClient" />-->
     <add name="ReservasDB" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=ReservasDB;Integrated Security=True;Pooling=False;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
