--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -50,11 +50,13 @@
     <Compile Include="DominioModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Recurso.cs" />
+    <Compile Include="Repos\IUsuariosRepo.cs" />
     <Compile Include="Security\UserProfile.cs" />
     <Compile Include="TipoCaracteristica.cs" />
     <Compile Include="TipoRecurso.cs" />
     <Compile Include="TipodeUsuario.cs" />
     <Compile Include="Usuario.cs" />
+    <Compile Include="ValidadorDeUsuarios.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
