--- a/Presentacion/packages.config
+++ b/Presentacion/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.2" targetFramework="net45" />
+  <package id="CommonServiceLocator.NinjectAdapter.Unofficial" version="3.0.1.12" targetFramework="net45" />
   <package id="DotNetOpenAuth.AspNet" version="4.1.4.12333" targetFramework="net45" />
   <package id="DotNetOpenAuth.Core" version="4.1.4.12333" targetFramework="net45" />
   <package id="DotNetOpenAuth.OAuth.Consumer" version="4.1.4.12333" targetFramework="net45" />
