--- a/AccesoDatos/AccesoDatos.csproj
+++ b/AccesoDatos/AccesoDatos.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repos\RecursosRepo.cs" />
     <Compile Include="Repos\RepoBase.cs" />
+    <Compile Include="Repos\ReservaRepo.cs" />
     <Compile Include="Repos\TiposDeCaracteristicasRepo.cs" />
     <Compile Include="Repos\UsuariosRepo.cs" />
     <Compile Include="ReservasContext.cs" />
