--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -54,9 +54,12 @@
   <ItemGroup>
     <Compile Include="Caracteristica.cs" />
     <Compile Include="DominioModule.cs" />
+    <Compile Include="EstadoReserva.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Recurso.cs" />
+    <Compile Include="Repos\IReservaRepo.cs" />
     <Compile Include="Repos\IUsuariosRepo.cs" />
+    <Compile Include="Reserva.cs" />
     <Compile Include="Security\UserProfile.cs" />
     <Compile Include="TipoCaracteristica.cs" />
     <Compile Include="TipoRecurso.cs" />
