--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -50,6 +50,9 @@
     <Compile Include="DominioModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Recurso.cs" />
+    <Compile Include="Repos\IRecursosRepo.cs" />
+    <Compile Include="Repos\ITiposDeRecursosRepo.cs" />
+    <Compile Include="Repos\ITiposDeCaracteristicasRepo.cs" />
     <Compile Include="Repos\IUsuariosRepo.cs" />
     <Compile Include="Security\UserProfile.cs" />
     <Compile Include="TipoCaracteristica.cs" />
