--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -71,7 +71,8 @@
     <Compile Include="UnitOfWork\IUnitOfWorkFactory.cs" />
     <Compile Include="UnitOfWork\UnitOfWorkFactory.cs" />
     <Compile Include="Usuario.cs" />
-    <Compile Include="ValidadorDeRecursos.cs" />
+    <Compile Include="Validacion\IValidadorDeRecursos.cs" />
+    <Compile Include="Validacion\ValidadorDeRecursos.cs" />
     <Compile Include="ValidadorDeUsuarios.cs" />
   </ItemGroup>
   <ItemGroup>
