corregi un error en el edit de users

--- a/Presentacion/Presentacion.csproj
+++ b/Presentacion/Presentacion.csproj
@@ -206,7 +206,7 @@
     <Compile Include="Controllers\ReservasController.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Models\Conversor.cs" />
+    <Compile Include="Models\Conversores\ConversorUsuarioUsuarioVM.cs" />
     <Compile Include="Models\Conversores\ConversorRecurso.cs" />
     <Compile Include="Models\Conversores\IConversorRecurso.cs" />
     <Compile Include="Soporte\EnumExtensions.cs" />
