--- a/Presentacion/Web.config
+++ b/Presentacion/Web.config
@@ -26,6 +26,13 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
+    <globalization
+           fileEncoding="utf-8"
+           requestEncoding="utf-8"
+           responseEncoding="utf-8"
+           culture="en-US"
+           uiCulture="en-US"
+        />
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
