--- a/Presentacion/Presentacion.csproj
+++ b/Presentacion/Presentacion.csproj
@@ -205,8 +205,8 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Helpers\Bootstrap\BootstrapHelpers.cs" />
-    <None Include="Helpers\Bootstrap\ButtonExtensions.cs12" />
     <Compile Include="Models\BusquedaRecursoVM.cs" />
+    <Compile Include="Models\Conversores\ConversorBusquedaReserva.cs" />
     <Compile Include="Models\Conversores\ConversorReservaMV.cs" />
     <Compile Include="Models\Conversores\ConversorUsuario.cs" />
     <Compile Include="Filters\AutorizarReserva.cs" />
@@ -292,16 +292,16 @@
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="favicon.ico" />
-    <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-2.1.1.js" />
     <Content Include="Scripts\jquery-2.1.1.min.js" />
     <Content Include="Scripts\jquery-2.1.1.min.map" />
-    <Content Include="fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Content\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\bootstrap.css.map" />
     <None Include="Scripts\jquery-2.1.1-vsdoc.js" />
