--- a/Presentacion/Web.config
+++ b/Presentacion/Web.config
@@ -26,7 +26,7 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
-    <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" culture="en-US" uiCulture="en-US" />
+    <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" culture="es-AR" uiCulture="es-AR" />
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
