--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -80,6 +80,7 @@
     <Compile Include="UnitOfWork\IUnitOfWorkFactory.cs" />
     <Compile Include="UnitOfWork\UnitOfWorkFactory.cs" />
     <Compile Include="Validacion\IValidadorDeRecursos.cs" />
+    <Compile Include="Validacion\IValidadorDeReserva.cs" />
     <Compile Include="Validacion\ValidadorDeRecursos.cs" />
     <Compile Include="Validacion\ValidadorDeReserva.cs" />
     <Compile Include="Validacion\ValidadorDeUsuarios.cs" />
