Unit test con Ninject.MockingKernel.Moq funcionando!

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,4 +3,5 @@
   <repository path="..\AccesoDatos\packages.config" />
   <repository path="..\Dominio\packages.config" />
   <repository path="..\Presentacion\packages.config" />
+  <repository path="..\ReservasDCICTest\packages.config" />
 </repositories>
