--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -81,6 +81,7 @@
     <Compile Include="UnitOfWork\UnitOfWorkFactory.cs" />
     <Compile Include="Validacion\IValidadorDeRecursos.cs" />
     <Compile Include="Validacion\IValidadorDeReserva.cs" />
+    <Compile Include="Validacion\IValidadorDeUsuarios.cs" />
     <Compile Include="Validacion\ValidadorDeRecursos.cs" />
     <Compile Include="Validacion\ValidadorDeReserva.cs" />
     <Compile Include="Validacion\ValidadorDeUsuarios.cs" />
