--- a/Presentacion/packages.config
+++ b/Presentacion/packages.config
@@ -14,6 +14,9 @@
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.11.2" targetFramework="net45" />
   <package id="jquery.validate.unobtrusive.bootstrap3" version="1.0.0" targetFramework="net45" />
+  <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
+  <package id="jQuery.Validation.Globalize" version="1.0.1" targetFramework="net45" />
+  <package id="jquery-globalize" version="0.1.3" targetFramework="net45" />
   <package id="knockoutjs" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net45" />
