--- a/Presentacion/packages.config
+++ b/Presentacion/packages.config
@@ -18,6 +18,7 @@
   <package id="jQuery.Validation.Globalize" version="1.0.1" targetFramework="net45" />
   <package id="jquery-globalize" version="0.1.3" targetFramework="net45" />
   <package id="knockoutjs" version="2.2.0" targetFramework="net45" />
+  <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
@@ -38,6 +39,8 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
+  <package id="Ninject.Extensions.Logging" version="3.2.1.0" targetFramework="net45" />
+  <package id="Ninject.Extensions.Logging.Log4net" version="3.2.1.0" targetFramework="net45" />
   <package id="Ninject.MVC3" version="3.2.1.0" targetFramework="net45" />
   <package id="Ninject.Web.Common" version="3.2.2.0" targetFramework="net45" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.2.0" targetFramework="net45" />
