--- a/Presentacion/Web.config
+++ b/Presentacion/Web.config
@@ -103,6 +103,7 @@
       <maxSizeRollBackups value="10" />
       <maximumFileSize value="10MB" />
       <staticLogFileName value="true" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%-5p %d %5rms %-22.22c{1} %-18.18M - %m%n" />
       </layout>
