--- a/Presentacion/Presentacion.csproj
+++ b/Presentacion/Presentacion.csproj
@@ -247,6 +247,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\dcic.png" />
+    <Content Include="Content\fullcalendar.min.css" />
     <Content Include="Content\jquery.datetimepicker.css" />
     <Content Include="Content\selectize.bootstrap3.css" />
     <Content Include="Content\themes\base\accordion.css" />
@@ -302,6 +303,8 @@
     <Content Include="Logs\log.txt" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\fullcalendar.lang.es.js" />
+    <Content Include="Scripts\fullcalendar.min.js" />
     <Content Include="Scripts\globalize\cultures\globalize.culture.es-AR.js" />
     <Content Include="Scripts\globalize\globalize.js" />
     <Content Include="Scripts\jquery-2.1.1.js" />
@@ -329,6 +332,7 @@
     <Content Include="Scripts\knockout-2.2.0.debug.js" />
     <Content Include="Scripts\knockout-2.2.0.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\moment.min.js" />
     <Content Include="Scripts\npm.js" />
     <Content Include="Scripts\recursos-utilities.js" />
     <Content Include="Scripts\selectize.min.js" />
