--- a/Presentacion/Web.config
+++ b/Presentacion/Web.config
@@ -22,7 +22,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" optimizeCompilations="true"  targetFramework="4.5" />
     <customErrors mode="On" />
     <httpRuntime targetFramework="4.5" />
     <authentication mode="Forms">
