--- a/Presentacion/Presentacion.csproj
+++ b/Presentacion/Presentacion.csproj
@@ -214,11 +214,12 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Filters\ExtendedHandleErrorAttribute.cs" />
+    <Compile Include="Filters\PerformanceMeasure.cs" />
     <Compile Include="Helpers\Bootstrap\BootstrapHelpers.cs" />
     <Compile Include="Models\BusquedaRecursoVM.cs" />
     <Compile Include="Models\Conversores\ConversorReserva.cs" />
     <Compile Include="Models\Conversores\ConversorUsuario.cs" />
-    <Compile Include="Filters\AutorizarReserva.cs" />
+    <Compile Include="Filters\AutorizarReservaAttribute.cs" />
     <Compile Include="Models\Conversores\ConversorRecurso.cs" />
     <Compile Include="Models\Conversores\IConversorRecurso.cs" />
     <Compile Include="Models\Conversores\IConversorReserva.cs" />
