--- a/ReservasDCICTest/ReservasDCICTest.csproj
+++ b/ReservasDCICTest/ReservasDCICTest.csproj
@@ -44,6 +44,7 @@
       <HintPath>..\packages\Moq.4.2.1402.2112\lib\net40\Moq.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Mvc, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.AspNet.Mvc.5.2.2\lib\net45\System.Web.Mvc.dll</HintPath>
@@ -64,7 +65,9 @@
   <ItemGroup>
     <Compile Include="AccesoDatos\RecursosRepoTest.cs" />
     <Compile Include="AccesoDatos\UsuariosRepoTest.cs" />
+    <Compile Include="Dominio\ReservasQueriesTSTest.cs" />
     <Compile Include="Dominio\ValidadorRecursosTest.cs" />
+    <Compile Include="Presentacion\FiltroAutorizarReservaTest.cs" />
     <Compile Include="Presentacion\RecursosControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
